# role-playing-guild

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.agent/context/: architecture.md
.agent/skills/: create-schema.md
.claude/: settings.local.json
backend/: Cargo.toml  rust-toolchain.toml
backend/migrations/: 20260111000001_create_users.up.sql  20260111000002_create_admin_user.up.sql  20260111000003_create_game_servers.up.sql
backend/src/: main.rs  settings.rs
backend/src/api/: mod.rs
docs/: ARCHITECTURE.md
docs/decisions/: 001-database-choice.md
shared/schemas/: game_server.json  user.json
